crashloop.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: maartje-crashloop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: maartje-crashloop
    spec:
      containers:
      - name: maartje-crashloop
        image: alpine
        command:
          - sh
          - -c
          - "sleep 5 && exit 1"
