http.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: http-test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: http-test
    spec:
      containers:
      - name: http-test
        image: nginx
        ports:
          - containerPort: 80
