shell.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: maartje-shell
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: maartje-shell
    spec:
      containers:
      - name: maartje-shell
        image: ubuntu
        command:
          - sleep
          - infinity
