ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-ingress-test
  namespace: maartje
spec:
  selector:
    app: http-ingress-test
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: maartje
spec:
  rules:
  - host: test.maartje.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: http-ingress-test
          servicePort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: http-ingress-test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: http-ingress-test
    spec:
      containers:
      - name: http-ingress-test
        image: nginx
        ports:
          - containerPort: 80
